{
    "name": "SecondaryControllerInputActions",
    "maps": [
        {
            "name": "Input",
            "id": "3e0c5285-850e-43fa-8323-8def565cd084",
            "actions": [
                {
                    "name": "PrimaryButtonPressed",
                    "type": "Button",
                    "id": "d19aee7e-130e-4a67-9c60-a4f1e396c347",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryButtonTouched",
                    "type": "Button",
                    "id": "d6d2ab95-710b-4403-9608-12ffaa850a2e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryButtonPressed",
                    "type": "Button",
                    "id": "b86f90da-1a54-4709-b544-7b8da660b0ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryButtonTouched",
                    "type": "Button",
                    "id": "c8a88f1e-2073-424b-bbd8-7853c684510d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MenuButtonPressed",
                    "type": "Button",
                    "id": "60c2e561-8b24-4144-9f21-cf438aa9cb3b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MenuButtonTouched",
                    "type": "Button",
                    "id": "a67db167-3a07-41a2-9f88-5ce9c99aa298",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerValue",
                    "type": "Value",
                    "id": "80b6b14d-6ff0-48c5-8163-a55d02a96321",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TriggerPressed",
                    "type": "Button",
                    "id": "68377a05-a41c-47fe-b6ea-e70d5fb0c38c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerTouched",
                    "type": "Button",
                    "id": "2a967063-f4b3-4898-85b4-dcdba9197a9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GripValue",
                    "type": "Value",
                    "id": "8e0362f7-70ac-4864-bdd7-6f1254786c08",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripPressed",
                    "type": "Button",
                    "id": "0ef504d6-dd96-4fa8-a86a-866db026b53c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GripTouched",
                    "type": "Button",
                    "id": "e3855ec8-42c6-4454-9fe7-70f42edabdef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThumbstickValue",
                    "type": "Value",
                    "id": "37cd651c-d53c-4388-8c4a-2ef3189f62b5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ThumbstickPressed",
                    "type": "Button",
                    "id": "dffbc3ef-f12f-44ee-8c4b-f6c8470e2b9e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThumbstickTouched",
                    "type": "Button",
                    "id": "3f565e47-49a6-4c96-9058-ea739804fef8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5e879ca4-4c0b-4616-95ed-c80a9d9a1f56",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryButtonPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e119b86f-1e03-436b-97cc-a5a8d0c6359d",
                    "path": "<XRController>{LeftHand}/primaryTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryButtonTouched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1eeefc56-ce5b-4e15-85cf-1360f3a279ee",
                    "path": "<XRController>{LeftHand}/secondaryTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryButtonTouched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf9f90e7-1db4-46cb-990d-4695739af958",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryButtonPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d166053-e2a0-4b64-aed6-a644afefc9fc",
                    "path": "<XRController>{LeftHand}/{Menu}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuButtonPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aaf262d7-fe33-433a-a379-db71b0362d39",
                    "path": "<XRController>{LeftHand}/{Menu}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuButtonTouched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4b864c2-e40a-4214-9078-4e3600c36cba",
                    "path": "<XRController>{LeftHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerValue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c14e8b4f-b85a-44ae-a6bb-e4f5acd540a0",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerTouched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "308bb2b1-0531-4201-aa42-dd67cef6f147",
                    "path": "<XRController>{LeftHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripValue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9fef0055-ba63-4d19-9c00-4ef68da5dbac",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripTouched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "782cc332-c9dc-4ad6-b0f4-ae78c6a46611",
                    "path": "<XRController>{LeftHand}/thumbstickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbstickPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "420ae121-1cd3-41f2-ac83-589faa71d4d4",
                    "path": "<XRController>{LeftHand}/thumbstickTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbstickTouched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b40243f-8fa9-4117-822b-7a9318681a1e",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be7a922a-b922-4789-826a-fd5c95c34f23",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3619b253-8597-4c2d-b3c9-4b35b8f36b25",
                    "path": "<XRController>{LeftHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbstickValue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "mousePositionComposite",
                    "id": "036680f6-996a-4390-8a74-f36ba70e40a6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbstickValue",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "01c64a92-4ff7-4d40-8e2e-005e9b1eb9a3",
                    "path": "<Mouse>/delta/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbstickValue",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f56187c2-ae7e-4f6b-8892-ce10d1bf7988",
                    "path": "<Mouse>/delta/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbstickValue",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b443f42f-34c7-475d-b992-91ec09b186b4",
                    "path": "<Mouse>/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbstickValue",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5c626fb6-20b1-4cfc-bd3b-676783e2fe44",
                    "path": "<Mouse>/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbstickValue",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Transform",
            "id": "79b72c03-7f21-461f-b047-6b31a65f7e7a",
            "actions": [
                {
                    "name": "DevicePosition",
                    "type": "Value",
                    "id": "38f337b0-1a99-4200-9031-a3795f7828db",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DeviceRotation",
                    "type": "Value",
                    "id": "a2340326-a00d-4bc0-8f2f-db18778247f9",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "8e0f80e3-d4b9-4ccd-ad8f-89fcee5e39b9",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerRotation",
                    "type": "Value",
                    "id": "3a922938-4f21-4b1c-bb87-641244272ced",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bbd5e3f5-195b-46ce-8362-5efc14fa1118",
                    "path": "<XRController>{RightHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DevicePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e799fa5d-b905-4088-8a67-d3daf3ff42bf",
                    "path": "<XRController>{RightHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeviceRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea1b1a11-808c-4431-99b6-d81c3a463f2b",
                    "path": "<XRController>{RightHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "mousePositionComposite",
                    "id": "7cf746a1-0236-4600-90da-98e82590329c",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "95e34933-93da-4fef-82a3-d31aa4b4bc28",
                    "path": "<Mouse>/delta/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "26121074-7413-4876-9772-d33c60ac31b8",
                    "path": "<Mouse>/delta/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "948b48c7-17d0-45a6-8701-e892e7555a5d",
                    "path": "<Mouse>/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "dadc0f03-28c0-48f3-8b91-60763f5c4758",
                    "path": "<Mouse>/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "dba90edb-a762-4b27-8b45-0672ec78af7c",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "202c0e06-468a-4786-8da5-aeadd08c81a0",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b7b381a9-7f0c-4b00-89c5-b72dd09dc64b",
                    "path": "<XRController>{RightHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}